 * Fix: Wagtail userbar is shown on pages that do not pass a `page` variable to the template (e.g. because they override the `serve` method)
 * Fix: request.site now set correctly on page preview when the page is not in the default site
 * Fix: Project template no longer raises a deprecation warning (Maximilian Stauss)


1.1 (15.09.2015)
~~~~~~~~~~~~~~~~

 * Implemented the `specific()` method on PageQuerySet, to return pages as their most specific type
 * "Promoted search results" has moved into its own module
 * Elasticsearch backend now supports an experimental `ATOMIC_REBUILD` flag to keep the existing index available while the `update_index` task is running
 * The wagtailapi module has been refactored to use Django REST Framework (Tom Christie)
 * A number of permissions fixes have been made to the Wagtail admin interface. See release notes for a list of specific changes made.
 * Snippets that inherit from `wagtail.wagtailsearch.index.Indexed` now appear as searchable within the Wagtail admin
 * Implemented deletion of form submissions (Kyungil Choi)
 * Implemented pagination in the page chooser modal
 * Changed INSTALLED_APPS in project template to list apps in precedence order (Piet Delport)
 * The `{% image %}` tag now supports filters on the image variable, e.g. `{% image primary_img|default:secondary_img width-500 %}`
 * Moved the style guide menu item into the Settings sub-menu
 * Search backends can now be specified by module (e.g. `wagtail.wagtailsearch.backends.elasticsearch`), rather than a specific class (`wagtail.wagtailsearch.backends.elasticsearch.ElasticSearch`)
 * Added ``descendant_of`` filter to the API (Michael Fillier)
 * Added optional directory argument to "wagtail start" command (Mitchel Cabuloy)
 * Non-superusers can now view/edit/delete sites if they have the correct permissions
 * Image file size is now stored in the database, to avoid unnecessary filesystem lookups