@@ -24,6 +24,7 @@ Changelog
  * Fix: Wagtail userbar is shown on pages that do not pass a `page` variable to the template (e.g. because they override the `serve` method)
  * Fix: request.site now set correctly on page preview when the page is not in the default site
  * Fix: Project template no longer raises a deprecation warning (Maximilian Stauss)
+ * Fix: `PageManager.sibling_of(page)` and `PageManager.not_sibling_of(page)` now default to inclusive (i.e. `page` is considered a sibling of itself), for consistency with other sibling methods
 
 
 1.1 (15.09.2015)
